deploy: a0517faf21b9d713a795236401f229e577a0fa31

--- a/tags/templates/index.html
+++ b/tags/templates/index.html
@@ -13,7 +13,7 @@
 <link rel=icon href=/vc/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/vc/book.min.89a77f7e702a8626749b948bbfb01109823daf6c1246ca407d1378833494c402.css integrity="sha256-iad/fnAqhiZ0m5SLv7ARCYI9r2wSRspAfRN4gzSUxAI=" crossorigin=anonymous>
 <script defer src=/vc/flexsearch.min.js></script>
-<script defer src=/vc/en.search.min.73a94bc671367b0e51ab427c26a8fcd1f58329c09c70c07ada275eb76d8da414.js integrity="sha256-c6lLxnE2ew5Rq0J8Jqj80fWDKcCccMB62idet22NpBQ=" crossorigin=anonymous></script>
+<script defer src=/vc/en.search.min.3402fb1b8505d8259c2b5347a5f59eae6187ad1f6e8f43171d243523e2b797ab.js integrity="sha256-NAL7G4UF2CWcK1NHpfWermGHrR9uj0MXHSQ1I+K3l6s=" crossorigin=anonymous></script>
 <link rel=alternate type=application/rss+xml href=https://vc-project.github.io/vc/tags/templates/index.xml title="Visual Computing">
 </head>
 <body dir=ltr>
@@ -115,6 +115,9 @@
 <a href=https://vc-project.github.io/vc/docs/shortcodes/rendering/Visibility/>Visibility</a>
 </li>
 </ul>
+</li>
+<li>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/shaders/uvTexture/>Uv Texture</a>
 </li>
 </ul>
 </li>
